[gd_scene load_steps=8 format=3 uid="uid://e4kh3q3xch7k"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_la5kf"]
[ext_resource type="ArrayMesh" uid="uid://yhsibpjp6lu3" path="res://assets/item/ammo.res" id="2_2ed1g"]
[ext_resource type="Texture2D" uid="uid://cqhiwe5cj4y0v" path="res://assets/Bullet.png" id="3_86qj0"]
[ext_resource type="PackedScene" uid="uid://byn6wxprdlskt" path="res://scenes/shadow.tscn" id="4_eeadw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_33krt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ogwhw"]
albedo_texture = ExtResource("3_86qj0")
metallic = 1.0
metallic_specular = 1.0
roughness = 0.8
clearcoat_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_17glo"]
viewport_path = NodePath("SubViewport")

[node name="Ammo" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
script = ExtResource("1_la5kf")
range = Vector2(10, 50)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_33krt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh = ExtResource("2_2ed1g")
surface_material_override/0 = SubResource("StandardMaterial3D_ogwhw")

[node name="Sprite3D" type="Sprite3D" parent="MeshInstance3D2"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.541251, 0)
billboard = 1
texture = SubResource("ViewportTexture_17glo")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(128, 128)

[node name="Label" type="Label" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60
text = "[amount]"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0

[node name="ShadowCast" type="RayCast3D" parent="."]
target_position = Vector3(0, -5, 0)

[node name="Shadow" parent="." instance=ExtResource("4_eeadw")]

[node name="GravCast" type="RayCast3D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
